[package]
name = "clipsaver"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI utility that allows you to save images in you clipboard to a file."
homepage = "https://ionshard.com/"
repository = "https://github.com/Ionshard/clipsaver"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arboard = "3.2.0"
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
image = "0.24.5"
log = "0.4.17"
simple_logger = "4.0.0"