[package]
name = "clipsaver"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A CLI utility that allows you to save images in you clipboard to a file."
homepage = "https://ionshard.com/"
repository = "https://github.com/Ionshard/clipsaver"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
config = "0.15.11"
dirs = "6.0.0"
image = "0.25.5"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["path"] }
simple_logger = "5.0.0"